# green-thought-ai

./: .gitignore  README.md  chatbot_ui.py  requirements.txt  run.sh
agents/tools/: get_countries_by_name.py
demo1/: chatbot_ui.py  document_ids.npy  llama_index.faiss  pyproject.toml  run.sh
demo1/agents/: conversational_agent.py  docpool.py
demo1/agents/tools/: document_processing.py  llama_index_tool.py
demo1/docs/: RESEARCH-LOG - What are the relevant dimensions in an ESG report.docx  ~$greenThought.AI - Step-01.pptx
demo1/docsearch/: run.sh
example-data/ESG-reports/2022/ecolytiq-GmbH/: EEN - Nachhaltigkeitsbericht über ecolytiq.docx
example-data/news/: Sustainability News-0001.docx
example-data/research-notes/OfCC/: How to Improve Sustainability Data Search.docx  World Business Council for Sustainable Development.docx
